fix spacing

--- a/content/pages/home/index.less
+++ b/content/pages/home/index.less
@@ -28,12 +28,13 @@ html, body {
     margin-top: 40px;
 
     &.example {
-      margin-top: 60px;
+      margin-top: 40px;
     }
   }
 
   &-muted {
     color: rgba(255,255,255,0.5);
+    padding-bottom: 6px;
   }
 
   overflow: hidden;
